# analogue-split

./: .gitignore  LICENSE  README.md  pyproject.toml
analoguesplit/: __init__.py  analoguesplit.py
notebook/: gamma plot.ipynb
src/: __init__.py  analoguesplit.py  hypothesis.py  split.py  visulization.py
